import * as THREE from "three";
import _ from "lodash";
import { TileTreeNode } from "./TileTreeNode";
import { TileLayerConfig } from "./TileLayerConfig";
import { PaintTileLayersMessageData } from "./TilePainter.worker";
import bgTile from "../../../../../core/domain/Visualization/examples/OsmTilesVis/assets/textures/tile_bg.png";
import TilePainterWorker from "./TilePainter.worker";

/**
 * @category VisualizationHelper
 */
export class TilesService {
  public thetaShift = THREE.MathUtils.degToRad(90 - 85.0511);
  public thetaBound = THREE.MathUtils.degToRad(85.0511);
  public geometryMap = new Map<
    number,
    Map<number, { geometry: THREE.SphereGeometry; position: THREE.Vector3 }>
  >();

  public bgTile = new Promise<HTMLImageElement>((r) =>
    new THREE.ImageLoader().load(bgTile, (i) => r(i))
  );
  public tileSize = 256;

  public tilePainter = new (TilePainterWorker as new () => Worker)();
  public canvasDrawnHandlerMap = new Map<
    string,
    (message: MessageEvent) => void
  >();

  public tileTreeRoot = new TileTreeNode(this, 0, 0, 0);

  constructor(
    public readonly layers: TileLayerConfig[] = [],
    public readonly r: number = 6371
  ) {
    this.tilePainter.onmessage = (message) => {
      const handler = this.canvasDrawnHandlerMap.get(message.data.tileKey);
      if (handler) handler(message);
    };
    Object.seal(this);
  }

  public createCanvas() {
    const canvas = document.createElement("canvas");
    canvas.width = this.tileSize;
    canvas.height = this.tileSize;
    this.bgTile
      .then((b) => createImageBitmap(b))
      .then((bitmap) => {
        const ctx = canvas.getContext("bitmaprenderer");
        if (ctx) ctx.transferFromImageBitmap(bitmap);
      });
    return canvas;
  }

  public requestCanvasDraw(tile: TileTreeNode, tileDistance: number) {
    const layers = this.layers.map((layer) => {
      const l = _.cloneDeep(layer);
      if (typeof l.tileUrl === "function")
        l.tileUrl = l.tileUrl(tile.x, tile.y, tile.zoom);
      return l;
    });

    const data: PaintTileLayersMessageData = {
      layers,
      name: "paintTileLayers",
      tileKey: tile.key,
      priority: tile.zoom - tileDistance,
    };

    this.tilePainter.postMessage(data);
  }

  public getGeometry(zoom: number, y: number) {
    let latMap = this.geometryMap.get(zoom);
    if (!latMap) {
      latMap = new Map<
        number,
        { geometry: THREE.SphereGeometry; position: THREE.Vector3 }
      >();
      this.geometryMap.set(zoom, latMap);
    }

    let geometry = latMap.get(y);
    if (!geometry) {
      const d = Math.floor((-Math.tanh(zoom / 4) + 1) * 30 + 1);
      geometry = {
        geometry: new THREE.SphereGeometry(
          this.r,
          d,
          d,
          0,
          this.phiLength(zoom),
          this.thetaStart(y, zoom),
          this.thetaLength(y, zoom)
        ),
        position: new THREE.Vector3(),
      };
      geometry.geometry.vertices.forEach((v) => {
        geometry?.position.add(v);
      });
      geometry.position.divideScalar(geometry.geometry.vertices.length);

      geometry.geometry.vertices.forEach((v) => {
        v.sub(geometry?.position || new THREE.Vector3());
      });
      geometry.geometry.verticesNeedUpdate = true;
      latMap.set(y, geometry);
    }
    return geometry;
  }

  public phiStart(x: number, zoom: number) {
    return this.phiLength(zoom) * x;
  }
  public phiLength(zoom: number) {
    return (2 * Math.PI) / 2 ** zoom;
  }

  public thetaStart(y: number, zoom: number) {
    return this.thetaBound - this.tile2lat(y, zoom) + this.thetaShift;
  }
  public thetaLength(y: number, zoom: number) {
    return (
      this.thetaBound -
      this.tile2lat(y + 1, zoom) +
      this.thetaShift -
      this.thetaStart(y, zoom)
    );
  }

  public tile2lat(y: number, z: number) {
    const n = Math.PI - (2 * Math.PI * y) / Math.pow(2, z);
    return Math.atan(0.5 * (Math.exp(n) - Math.exp(-n)));
  }

  public tile2long(x: number, z: number) {
    return ((x / Math.pow(2, z)) * 2 - 1) * Math.PI;
  }

  public long2tile(lon: number, zoom: number) {
    return Math.floor(((lon + Math.PI) / (Math.PI * 2)) * Math.pow(2, zoom));
  }

  public lat2tile(lat: number, zoom: number) {
    return Math.floor(
      ((1 - Math.log(Math.tan(lat) + 1 / Math.cos(lat)) / Math.PI) / 2) *
        Math.pow(2, zoom)
    );
  }
}
